--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,1 +1,15 @@
-CI workflow
+name: CI workflow
+on:
+ push:
+  branches:
+   - main
+  pull_request:
+   - main
+   
+jobs:
+ build:
+  runs-on:
+   ubuntu-latest
+  container:
+   python:3.9-slim
+			
