--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,8 +8,6 @@ on:
    
 jobs:
  build:
-  runs-on:
-   ubuntu-latest
-  container:
-   python:3.9-slim
+  runs-on: ubuntu-latest
+  container: python:3.9-slim
 			
