--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,12 +1,21 @@
 name: CI workflow
 on:
- push:
-  branches:
-   - main
-  pull_request:
-   - main
+   push:
+      branches:
+         - main
+      pull_request:
+         - main
    
 jobs:
- build:
-  runs-on: ubuntu-latest
-  container: python:3.9-slim
+   build:
+      runs-on: ubuntu-latest
+      container: python:3.9-slim
+      steps:
+         - name: Checkout
+           uses: actions/checkout@v3
+         - name: Install Dependencies
+           run: python -m pip install --upgrade pip | pip install -r requirements.txt
+         - name: Lint with flake8
+           run: flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics | flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
+         - name: Run unit tests with pytests
+           run:  pytest -v --tb=short --color=yes --cov=src --cov-report=term-missing
