--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,16 +1,21 @@
 name: CI workflow
 on:
-   push:
-      branches:
-         - main
-      pull_request:
-         - main
-   
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
-   build:
-      runs-on: ubuntu-latest
-      container: python:3.9-slim
-      steps:
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+
+    steps:
          - name: Checkout
            uses: actions/checkout@v3
          - name: Install Dependencies
@@ -23,3 +28,7 @@ jobs:
             flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
          - name: Run unit tests with pytests
            run:  pytest -v --tb=short --color=yes --cov=src --cov-report=term-missing
+         - name: Scan for vulnerabilities with Bandit
+           run: |
+            python -m pip install bandit
+            bandit -r src
